fixes horizontal scrolling issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@ body {
   margin: -1% -1% -1% -1%;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .cards-container {
   width: 100%;
   height: 50vh;
